# arts

./: .gitignore  AGENTS.md  prek.toml  pyproject.toml  requirements.txt
.agents/instructions/: agent-quickstart.instructions.md  content-organization.instructions.md  core-workflows.instructions.md  editing-conventions.instructions.md  python-entry-points.instructions.md  testing.instructions.md
.github/instructions/: agent-quickstart.instructions.md  commit-convention.instructions.md  content-organization.instructions.md  core-workflows.instructions.md  editing-conventions.instructions.md  testing.instructions.md
.github/workflows/: ci.yml
arts/reshiram–xerneas/: .gitignore
arts/sweet mushroom/: .gitignore
reshiram–xerneas/: .gitignore  reshiram–xerneas.xcf.zip.006
scripts/: __init__.py  split  split.bat  split.py  split.sh  unsplit  unsplit.bat  unsplit.py  unsplit.sh
sweet mushroom/: sweet mushroom.xcf.009
tests/: conftest.py  utils.py
tests/scripts_/: __init__.py  test_split.py  test_unsplit.py
tests/tests/: __init__.py  test_utils.py
